--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "riot-route": "^3.0.2"
   },
   "devDependencies": {
+    "browser-sync": "^2.18.6",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.0.0",
     "rollup-plugin-commonjs": "^7.0.0",
