chore: Update ESlint configuration and riot versions

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,12 @@
 {
-"extends": [
-       "eslint:recommended"]
+  "extends": [
+         "eslint:recommended"],
+  "env": {
+    "browser": true,
+    "es6": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module"
+  }
 }
